# rust_mysql_common

./: .travis.yml  CRATE_LEVEL_DOCS.md  Cargo.toml  README.md  README.tpl  build.rs  build_test_libs.rs
.github/workflows/: rust.yml
derive/: Cargo.toml
derive/src/: error.rs  lib.rs  warn.rs
derive/src/from_row/structs/: mod.rs
derive/src/from_row/structs/attrs/: container.rs  field.rs
derive/src/from_value/: mod.rs
derive/src/from_value/enums/: misc.rs  mod.rs
derive/src/from_value/enums/attrs/: container.rs  variant.rs
derive/src/from_value/structs/: mod.rs
derive/src/from_value/structs/attrs/: container.rs
src/: binlog.rs  bitflags_ext.rs  collations.rs  constants.rs  io.rs  lib.rs  misc.rs  named_params.rs  packets.rs  params.rs  scramble.rs
src/auth/: common.rs  mod.rs
src/auth/plugins/: caching_sha2_password.rs  client_ed25519.rs  mod.rs  mysql_clear_password.rs  mysql_native_password.rs  mysql_old_password.rs  parsec.rs  sha256_password.rs
src/binlog/: consts.rs  jsonb.rs  jsondiff.rs  misc.rs  mod.rs  row.rs  time.rs  value.rs
src/binlog/decimal/: mod.rs
src/binlog/decimal/test/: libstrings_bindings.rs  mod.rs
src/binlog/events/: anonymous_gtid_event.rs  begin_load_query_event.rs  delete_rows_event.rs  delete_rows_event_v1.rs  execute_load_query_event.rs  format_description_event.rs  gtid_event.rs  incident_event.rs  intvar_event.rs  mod.rs  partial_update_rows_event.rs  previous_gtids_event.rs  query_event.rs  rand_event.rs  rotate_event.rs  rows_event.rs  rows_query_event.rs  table_map_event.rs  transaction_payload_event.rs  update_rows_event.rs  update_rows_event_v1.rs  user_var_event.rs  write_rows_event.rs  write_rows_event_v1.rs  xid_event.rs
src/crypto/: der.rs  mod.rs  rsa.rs
src/misc/: mod.rs
src/misc/raw/: _const.rs  bytes.rs  flags.rs  int.rs  mod.rs  seq.rs  text.rs
src/packets/: binlog_request.rs  caching_sha2_password.rs  mod.rs  session_state_change.rs
src/proto/: mod.rs  sync_framed.rs
src/proto/codec/: error.rs  mod.rs
src/row/: convert.rs  mod.rs
src/row/convert/: frunk.rs  mod.rs
src/value/: binlog.rs  convert.rs  mod.rs
src/value/convert/: bigdecimal.rs  bigdecimal03.rs  bigdecimal04.rs  bigint.rs  chrono.rs  decimal.rs  mod.rs  time.rs  time03.rs  unic_langid.rs  uuid.rs
src/value/json/: mod.rs  rustc_integration.rs  serde_integration.rs
test-data/binlogs/: binlog_transaction_previous_GTID_no_tag.000001  binlog_transaction_with_GTID_TAG.000001  json-opaque.binlog  minimal_row_metadata.000001  time_issue.000001  vector.binlog
