[package]
name = "mysql-common-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true
bench = false

[dependencies]
darling = "0.14.1"
heck = "0.4.0"
num-bigint = "0.4.3"
proc-macro-crate = "1.2.1"
proc-macro-error = "1"
proc-macro2 = "1.0.42"
quote = "1.0.9"
syn = { version = "1.0.74", features = ["full"] }
termcolor = "1.1.3"
thiserror = "1"

[dev-dependencies]
mysql_common = { path = "..", features = ["derive"] }
